# INDRA-Sat-Diff

./: README.md  future_work_and_bugs.txt  main.py  pyproject.toml
climate_forecast/: cli.py
climate_forecast/configs/: train.yaml
climate_forecast/datasets/: augmentation.py  dataloader.py  evaluation.py  preprocess_logic.py  torch_wrapper.py  visualization.bak  visualization.py
climate_forecast/diffusion/: latent_diffusion.py
climate_forecast/diffusion/knowledge_alignment/: alignment_guides.py  alignment_pl.py  models.py
climate_forecast/examples/: README.md  config.yaml  main.py
climate_forecast/models/: time_embed.py
climate_forecast/models/cuboid_transformer/: cuboid_transformer.py
climate_forecast/pipelines/: forecast.py  preprocess.py  train.py
climate_forecast/training/: alignment_module.py  indra_sat_diff_module.py  prediff_module.py  vae_module.py
climate_forecast/utils/: callbacks.py  config_loader.py  path.py  pl_checkpoint.py
